--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -10,12 +10,12 @@
 		width: 1003px;
 }
 	@media screen and (min-width: $break-xl) {
-	width: 1211px;
+		width: 1211px;
 }
 }
 
 @mixin navbar-flexbox-items {
-	margin-top: 5px;
+	margin-top: 7px;
 	padding-top: 5px;
 	display: block;
 }
@@ -38,14 +38,10 @@
 }
 
 @mixin menu-btn-basic {
-	color: white;
-  width: 4.2rem;
-  height: 3.5rem;
-  font-size: 12px;
-  text-transform: uppercase;
   background-color: #333645;
-  border-radius: 7%;
-  border: 2px #333645 solid;
+  height: 55px;
+  width: 65px;
+  border-radius: 4px;
 }
 
 @mixin menu-btn-hover {
@@ -69,7 +65,6 @@
 }
 }
 
-
 @mixin news-title-style {
 	font-size: 1rem;
 	font-weight: 600;
@@ -83,7 +78,7 @@
 }
 
 @mixin second-nav-background {
-	width: 100vw;
+	width: 100%;
 	height: 45px;
 	position: absolute;
 	left: 0;
