--- a/scss/_news-cards.scss
+++ b/scss/_news-cards.scss
@@ -58,6 +58,7 @@
 //Each newscard container div
 .news-card {
 	border: 1px $color-button-gray solid;
+	border-radius: 4px;
 	margin: 1rem 1rem;
 	background-color: white;
 	max-width: 95%;
