--- a/scss/_newsletter.scss
+++ b/scss/_newsletter.scss
@@ -53,6 +53,7 @@
 	border: 1px solid #ccc;
 	transition: .5s;
 	outline: none;
+	padding-left: 12px;
 	@media only screen and (min-width: $break-l) {
 		width: 130%;
 }
