--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -21,4 +21,4 @@ $break-xs: 575px;
 $break-s: 576px;
 $break-m: 768px;
 $break-l: 992px;
-$break-xl: 1200px;
+$break-xl: 1260px;
